--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -28,7 +28,7 @@
         <!-- logo navbar -->
         <button type="button" class="navbar-button" id="menuToggleBtn">
           <svg class="navbar-svg" width="16" height="12">
-            <use id="menuIcon" href="./img/sprite.svg#icon-navbar"></use>
+            <use id="menuIcon" href="/img/sprite.svg#icon-navbar"></use>
           </svg>
         </button>
 
@@ -39,7 +39,7 @@
           </svg>
         </a>
         <!-- a-Join -->
-        <a class="link-join btn-blue-hover" href="#">
+        <a class="link-join btn-blue-hover" href="#pricing">
           <span class="join-text">Join</span>
           <span class="join-now-text">Join Now</span>
         </a>
@@ -54,19 +54,19 @@
     <div class="header-mob">
       <button type="button" class="navbar-button" id="menuToggleBtn">
         <svg class="navbar-svg" width="16" height="12">
-          <use id="menuIcon" href="./img/sprite.svg#icon-navbar"></use>
+          <use id="menuIcon" href="/img/sprite.svg#icon-navbar"></use>
         </svg>
       </button>
 
       <!-- logo yogabloom -->
       <a class="logo-link" href="/src/index.html">
         <svg class="logo-link-svg" width="83" height="23">
-          <use href="./img/sprite.svg#icon-yoga-bloom"></use>
+          <use href="/img/sprite.svg#icon-yoga-bloom"></use>
         </svg>
       </a>
       <!--a-Join -->
 
-      <a class="link-join" href="">
+      <a class="link-join" href="#pricing">
         <span class="join-text">Join</span>
         <span class="join-now-text">Join Now</span>
       </a>
@@ -91,6 +91,6 @@
       </ul>
     </nav>
 
-    <a class="navbar-link-join btn-blue-hover" href="">Join</a>
+    <a class="navbar-link-join btn-blue-hover" href="#pricing">Join</a>
   </div>
 </div>
