--- a/src/css/header.css
+++ b/src/css/header.css
@@ -140,7 +140,8 @@
   background: #c2d9fc;
   border: 1px solid #c2d9fc;
   border-radius: 100px;
-  width: 343px;
+  max-width: 343px;
+  width: 100px;
   height: 46px;
   font-weight: 500;
   font-size: 16px;
