--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -1,3 +1,5 @@
+
+
 .backdrop-one {
     position: fixed;
     top: 0;
@@ -16,9 +18,6 @@
     position: absolute;
     top: 24px;
     right: 24px;
-
-    background: transparent;
-    border: none;
     cursor: pointer;
 }
 
@@ -28,14 +27,12 @@
     height: 24px;
     position: absolute;
     top: 24px;
-
+    background: none;
     border: none;
     right: 24px;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #e7e9fc;
-    border: 1px solid rgba(0, 0, 0, 0.1);
     padding: 0;
     cursor: pointer;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -43,6 +40,8 @@
 
 .modal-close-svg {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    width: 14px;
+    height: 14px;
 }
 
 .backdrop-one.is-open {
@@ -52,6 +51,8 @@
     padding: 64px 16px 112px 16px;
     max-width: 375px;
     width: 100%;
+    max-height: 90%;
+    overflow: auto;
     position: relative;
     background-color: #dfebeb;
 
