--- a/src/partials/section-help.html
+++ b/src/partials/section-help.html
@@ -1,8 +1,7 @@
-
 <section class="yoga-section" id="team">
   <div class="container yoga-container">
     <div class="container-title">
-      <h2 class="yoga-help-main-title">Why Yoga Helps You</h2>
+      <h2 class="base-h yoga-help-h">Why Yoga Helps You</h2>
       <p class="yoga-help-main-title-text">
         Four science-backed reasons to start your journey today
       </p>
