--- a/src/partials/section-popular-programs.html
+++ b/src/partials/section-popular-programs.html
@@ -1,7 +1,9 @@
 <section class="programs-section" id="popular-programs">
   <div class="container programs-container">
     <span class="programs-span">Explore</span>
-    <h2 class="programs-title">Discover Our Most Popular Yoga Programs</h2>
+    <h2 class="base-h pop-program-h">
+      Discover Our Most Popular Yoga Programs
+    </h2>
     <p class="programs-description main-description">
       Join our community and elevate your practice with our expertly designed
       yoga programs. Each course is tailored to meet various skill levels and
