--- a/src/partials/section-pricing-plan.html
+++ b/src/partials/section-pricing-plan.html
@@ -1,7 +1,7 @@
 <section id="pricing" class="pricing-section">
   <div class="container">
     <p class="subheading">Affordable</p>
-    <h2 class="heading">Pricing Plans</h2>
+    <h2 class="base-h pricing-plan-h">Pricing Plans</h2>
     <p class="description">Choose the perfect plan for your yoga journey.</p>
 
     <div class="pricing-container">
