--- a/src/partials/section-team.html
+++ b/src/partials/section-team.html
@@ -1,10 +1,9 @@
-
 <section id="team">
   <div class="container">
     <div class="container-team-general">
       <div class="section-three-container">
         <p class="subtitle">Meet</p>
-        <h2 class="title">Our Team</h2>
+        <h2 class="base-h team-h">Our Team</h2>
         <p class="paragraph-team">
           Dedicated professionals passionate about yoga and wellness.
         </p>
