--- a/src/partials/section-testimonials.html
+++ b/src/partials/section-testimonials.html
@@ -1,6 +1,6 @@
 <section id="testimonials" class="testimonials-section">
   <div class="container">
-    <h2 class="testimonials-title">Testimonials</h2>
+    <h2 class="base-h testimonials-h">Testimonials</h2>
     <p class="testimonials-subtitle">What our happy clients say</p>
 
     <ul class="testimonials-list">
