--- a/src/css/section-team.css
+++ b/src/css/section-team.css
@@ -13,15 +13,6 @@
     margin-bottom: 12px;
 }
 
-.title {
-    font-weight: 400;
-    font-size: 40px;
-    line-height: 1.2;
-    letter-spacing: 0.01em;
-    text-align: center;
-    margin-bottom: 20px;
-}
-
 .paragraph-team {
     font-weight: 400;
     font-size: 16px;
@@ -118,7 +109,7 @@
             margin-top: auto;
             
     }
-    .title {
+    .team-h {
             font-size: 52px;
         }
 
