--- a/src/css/section-testimonials.css
+++ b/src/css/section-testimonials.css
@@ -4,13 +4,8 @@
   text-align: center;
 }
 
-.testimonials-title {
-  font-family: 'Cabin', sans-serif;
+.testimonials-h {
   font-size: 52px;
-  line-height: 1.2;
-  font-weight: 400;
-  letter-spacing: 0.01em;
-  margin-bottom: 20px;
 }
 
 .testimonials-subtitle {
@@ -89,10 +84,10 @@
     margin-bottom: 24px;
   }
 
-  .testimonials-title {
+  .testimonials-h {
     font-size: 40px;
-    margin-bottom: 24px;
   }
+
 
   .card-one,
   .card-two {
