--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -33,7 +33,7 @@
         </button>
 
         <!-- logo yogabloom -->
-        <a class="logo-link" href="/src/index.html">
+        <a class="logo-link" href="./index.html">
           <svg class="logo-link-svg" width="83" height="23">
             <use href="/img/sprite.svg#icon-yoga-bloom"></use>
           </svg>
