--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -52,7 +52,7 @@
 <div class="navbar-menu" data-modal>
   <div class="container header-container">
     <div class="header-mob">
-      <button type="button" class="navbar-button" id="menuToggleBtn">
+      <button type="button" class="navbar-button">
         <svg class="navbar-svg" width="16" height="12">
           <use id="menuIcon" href="/img/sprite.svg#icon-navbar"></use>
         </svg>
@@ -74,7 +74,7 @@
     <nav class="navbar-navigation marking">
       <ul class="navbar-list">
         <li class="navbar-item">
-          <a class="navbar-link" href="#yoga-classes">Yoga Classes</a>
+          <a class="navbar-link" href="#popular-programs">Yoga Classes</a>
         </li>
         <li class="navbar-item">
           <a class="navbar-link" href="#team">Team</a>
