--- a/src/partials/section-pricing-plan.html
+++ b/src/partials/section-pricing-plan.html
@@ -29,7 +29,11 @@
               >Community support group
             </li>
           </ul>
-          <button class="card__button" data-plan="One Session" data-price="$10">
+          <button
+            class="card-button btn-blue-hover"
+            data-plan="One Session"
+            data-price="$10"
+          >
             Join
           </button>
         </div>
@@ -59,7 +63,7 @@
             </li>
           </ul>
           <button
-            class="card__button"
+            class="card-button btn-blue-hover"
             data-plan="8 Sessions Package"
             data-price="$65"
           >
@@ -73,7 +77,7 @@
           <h3 class="card__title">12 Sessions Package</h3>
           <p class="card__price">$80</p>
           <button
-            class="card__button tablet-only"
+            class="card-button btn-blue-hover tablet-only"
             data-plan="8 Sessions Package"
             data-price="$80"
           >
@@ -109,7 +113,7 @@
             </li>
           </ul>
           <button
-            class="card__button mobdesk-only"
+            class="card-button btn-blue-hover mobdesk-only"
             data-plan="8 Sessions Package"
             data-price="$80"
           >
