new function added 2

--- a/src/partials/section-testimonials.html
+++ b/src/partials/section-testimonials.html
@@ -17,6 +17,7 @@
             alt="photo Donna Norman"
             width="56"
             height="56"
+            сlass="avatar"
           />
           <div class="author-info">
             <p class="author-name">Donna Norman</p>
@@ -36,6 +37,7 @@
             alt="photo Sophie Delgado"
             width="56"
             height="56"
+            сlass="avatar"
           />
           <div class="author-info">
             <p class="author-name">Sophie Delgado</p>
@@ -55,6 +57,7 @@
             alt="photo Rachel Kimura"
             width="56"
             height="56"
+            сlass="avatar"
           />
           <div class="author-info">
             <p class="author-name">Rachel Kimura</p>
@@ -75,6 +78,7 @@
             alt="photo Emma L. Hart"
             width="56"
             height="56"
+            сlass="avatar"
           />
           <div class="author-info">
             <p class="author-name">Emma L. Hart</p>
