--- a/src/css/section-testimonials.css
+++ b/src/css/section-testimonials.css
@@ -44,6 +44,16 @@
   margin-bottom: 32px;
 }
 
+.testimonial-author img {
+  border-radius: 50%;
+  transition: transform 0.3s ease;
+  will-change: transform;
+}
+
+.testimonial-author img:hover {
+  transform: scale(1.15);
+}
+
 .testimonial-author {
   display: flex;
   flex-direction: column;
