--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -31,7 +31,7 @@
         <div class="div-item">
           <h3 class="header">Quick Links</h3>
           <ul class="links-list">
-            <li><a href="#yoga-classes">Yoga Classes</a></li>
+            <li><a href="#popular-programs">Yoga Classes</a></li>
             <li><a href="#team">Team</a></li>
             <li><a href="#pricing">Pricing</a></li>
             <li><a href="#contacts">Contacts</a></li>
