--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -54,7 +54,7 @@
     <div class="header-mob">
       <button type="button" class="navbar-button">
         <svg class="navbar-svg" width="16" height="12">
-          <use id="menuIcon" href="/img/sprite.svg#icon-navbar"></use>
+          <use href="/img/sprite.svg#icon-navbar"></use>
         </svg>
       </button>
 
