--- a/src/partials/section-help.html
+++ b/src/partials/section-help.html
@@ -1,4 +1,4 @@
-<section class="yoga-section" id="team">
+<section class="yoga-section">
   <div class="container yoga-container">
     <div class="container-title">
       <h2 class="base-h yoga-help-h">Why Yoga Helps You</h2>
