--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -9,7 +9,7 @@
           Subscribe to our newsletter for the latest updates on our yoga courses
           and events.
         </p>
-        <form action="" class="footer-form">
+        <form class="footer-form">
           <input
             type="email"
             name="email"
