--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -31,10 +31,12 @@
         <div class="div-item">
           <h3 class="header">Quick Links</h3>
           <ul class="links-list">
-            <li><a href="#popular-programs">Yoga Classes</a></li>
-            <li><a href="#team">Team</a></li>
-            <li><a href="#pricing">Pricing</a></li>
-            <li><a href="#contacts">Contacts</a></li>
+            <li>
+              <a href="#popular-programs" class="links-list-it">Yoga Classes</a>
+            </li>
+            <li><a href="#team" class="links-list-it">Team</a></li>
+            <li><a href="#pricing" class="links-list-it">Pricing</a></li>
+            <li><a href="#contacts" class="links-list-it">Contacts</a></li>
           </ul>
         </div>
 
